# Germini

./: .gitignore  README.md  platformio.ini
Firmware/include/: config.h
Firmware/src/: main.cpp
GUI/: CMakeLists.txt  GUIA_DESARROLLO.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: config.h
src/: main.cpp
